KTTL-1115 - [FE-Tablet] Recent Highlights | General Layout issues (#1331)

--- a/src/theme/css/frontend/_recent-highlights.scss
+++ b/src/theme/css/frontend/_recent-highlights.scss
@@ -16,7 +16,7 @@ $arrow-right: '/wp-content/themes/trevor/static/media/carousel-arrow-right.svg';
     @apply font-semibold text-px32 leading-px40 tracking-px_015;
 
     @screen md {
-      @apply text-px32 leading-px40;
+      @apply text-px32 leading-px40 tracking-px05;
     }
 
     @screen xl {
@@ -57,6 +57,7 @@ $arrow-right: '/wp-content/themes/trevor/static/media/carousel-arrow-right.svg';
     box-shadow: 0px 6px 12px rgba(0, 58, 72, 0.1);
 
     @screen md {
+      height: rem-calc(450);
       width: calc((100% - #{rem-calc(28)}) / 2);
     }
 
@@ -78,6 +79,10 @@ $arrow-right: '/wp-content/themes/trevor/static/media/carousel-arrow-right.svg';
       @apply block w-full;
       content: '';
       padding-top: calc(100% * 240 / 319);
+
+      @screen md {
+        padding-top: calc(100% * 205 / 319);
+      }
 
       @screen lg {
         padding-top: calc(100% * 522 / 467);
@@ -106,6 +111,10 @@ $arrow-right: '/wp-content/themes/trevor/static/media/carousel-arrow-right.svg';
   }
 
   &__title {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
     @apply font-semibold mt-px20 text-px24 leading-px30 tracking-em005;
 
     @screen lg {
